# Applaunch

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  main.js  styles.css
src-tauri/: 2  Cargo.toml  Config.ini  setup.sql  tauri.conf.json
src-tauri/binaries/db/: db.sqlite
src-tauri/capabilities/: default.json  migrated.json
src-tauri/db/: db.sqlite
src-tauri/src/: app_controller.rs  error_handler.rs  main.rs  routes.rs  server.rs
src/apis/: applist.js
src/assets/: main.css
src/components/: AlertComponent.vue  AlertError.vue  AlertInfo.vue  AlertSuccess.vue  Appcard.vue  Applistcomponent.vue  BottomNav.vue  Bubbles.vue  ModalDelete.vue  TitleBar.vue
src/router/: index.js
src/stores/: fetch.js
src/views/: AddappView.vue  AppDetail.vue  ApplistView.vue  FormappView.vue
