[package]
name = "applaunch"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "protocol-asset", "http-all", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
portpicker = "0.1" # used in the example to pick a random free port
actix-web = "4.0"
sqlx = "0.7.4"
chrono = {version = "0.4.38", features = ["SqlitePool"]}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
